@@ -4,7 +4,8 @@ ENABLE_GCJ_COMPILED_KAWA = ../../../bin/kawa-bin
 KAWA = $(@GCJ_COMPILED_SELECTED@_KAWA)
 CLEANFILES = tmp? *.log testing.zip *.class
 
-SOURCES = test1.xql expected1.xml tab.xml.in maketab1.xql tab.html
+SOURCES = test1.xql expected1.xml tab.xml.in maketab1.xql tab.html \
+  multab.xql expectedmul.xml
 
 all:
 
@@ -18,9 +19,18 @@ check-test1:  test1.class
 maketab1.class:  maketab1.xql
 	$(KAWA) --main --xquery -C $<
 
+# Should not run $(JAVA) when built --with-gcj, as that runs
+# interpreter gij.  Instead, should compile to native.
 check-maketab1:  maketab1.class
 	CLASSPATH=.:$(KAWALIB) $(JAVA) maketab1 >tmp2
 	diff -b $(srcdir)/tab.html tmp2
 
-check:  check-test1 check-maketab1
+multab.class:  multab.xql
+	$(KAWA) --main --xquery -C $<
+
+check-multab:  multab.class
+	CLASSPATH=.:$(KAWALIB) $(JAVA) multab >tmp3
+	@if diff -b $(srcdir)/expectedmul.xml tmp3; then echo '# multab test passes'; else echo FAIL multab test; fi
+
+check:  check-test1 check-maketab1 check-multab
 
