@@ -1,3 +1,9 @@
+2001-09-24  Per Bothner  <per@bothner.com>
+
+	* multab.xql:  New test - generate multiplication table.
+	* expectedmul.xml:  New file - expected output of multab.xql.
+	* Makefile.am:  Update for new test.
+
 2001-08-23  Per Bothner  <per@bothner.com>
 
 	* tab.xml.in. maketab1.xql, tab.html:  New files - new testcase.
